# state_machine

./: CMakeLists.txt  main.cpp  state_machine.cpp  state_machine.h  state_machine_test.cpp
include/: state_machine.h
src/: CMakeLists.txt  state_machine.cpp  state_machine_test.cpp
